# elt-2025-2026

./: .env.example  .gitignore  NOTES.md  PRESENTATION.md  README.md  comparatif_llm.ipynb  npc_brain.ipynb  npc_brain.py  pyproject.toml  visu.py
data/bronze/runs/: run_0165cacb2f1041bf936b0f9e813c73fe.parquet  run_02b9cd0d7a534e898599da6667c682b7.parquet  run_0521424aaaa14bcbaf02c353ce39deab.parquet  run_0f29a7eab1e247899c3d530def4299dd.parquet  run_127a57acd69443daaa057a860c2d7ce5.parquet  run_215a95e0b58d4387b41e1f76c92169e4.parquet  run_244bda5ae765402493a2791045eb8931.parquet  run_2a9139a21d53416385b6547230e94c45.parquet  run_2ed78bf76b8d4de19edfe379cfa1c0f9.parquet  run_31ba44255bd049e3a8275fb7d3766e15.parquet  run_345f2e1a57454f7ab4202cc094b7cfb1.parquet  run_387a0256d0c6413386425acff1eea902.parquet  run_38ac80b9bc82466f89f2e50cd208c291.parquet  run_3d04aa9929bf4d7b8b90b4936d0cffb4.parquet  run_42ce632e85c740139eb9d66343e20356.parquet  run_44953ce48391444c849588448fb53a0a.parquet  run_4fa74a36bb814bdaa5b5e04a13617a42.parquet  run_50d3e293cce44bee8858ce50170bc2c5.parquet  run_534a69c3e06e4499b78dc45a63623fd6.parquet  run_58b6853dbe504c6db25261531a705185.parquet  run_60f16e5abf5244978d2bf40d042dac65.parquet  (+41 more)
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/models/: sources.yml
dbt/seeds/: modeles_llm.csv  schema.yml
dbt/tests/: assert_kpi_typologie_unique.sql
docs/: benchmark_exemple.html
src/: benchmark.py  build_report.py  challenge_llm.py  datalog.py  engine.py  visu.py
tests/: test_data_pipeline.py  test_npc_brain.py
(+69 files in other folders)
